change layout of ul list with nav label portfolio

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,7 @@
 .body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: medium;
+    text-align: center;
 }
 .img{
     width: 100px;
