--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,4 +11,14 @@
 h1{
     color: indianred;
     font-style: normal;
+} 
+nav{
+    height: 80px;
+    background-color: lightseagreen;
+}
+label.logo{
+    font-size: 35px;
+    font-weight: bold;
+    line-height: 50px;
+    padding: o 100px;
 }
