--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,11 +14,20 @@ h1{
 } 
 nav{
     height: 80px;
-    background-color: lightseagreen;
 }
 label.logo{
     font-size: 35px;
     font-weight: bold;
     line-height: 50px;
     padding: o 100px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+img{
+    float: left;
+    border-width: 30px;
+    margin-top: 50px;
 }
