change font color,font size and text transform to nav

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,3 +31,8 @@ img{
     border-width: 30px;
     margin-top: 50px;
 }
+nav ul li a{
+    color: indianred;
+    font-size: 25px;
+    text-transform: uppercase;
+}
