create active class,add hover effect on nav

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,6 +33,11 @@ img{
 }
 nav ul li a{
     color: indianred;
+    float: left;
     font-size: 25px;
     text-transform: uppercase;
+}
+a.active,a:hover{
+    background: lightblue;
+    transition: .5s;
 }
