replace colon with semi-colon at label.logo

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,7 +19,7 @@ label.logo{
     font-size: 35px;
     font-weight: bold;
     line-height: 50px;
-    padding: o 100px:
+    padding: o 100px;
 }
 nav ul li{
     display: inline-block;
